force-app/main/default/objects/Appointment__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date of the appointment</description>
    <inlineHelpText>When is this appointment scheduled?</inlineHelpText>
</CustomField>