force-app/main/default/objects/Appointment__c/fields/Booked_Online__c.field-meta.xml
<CustomField>
    <fullName>Booked_Online__c</fullName>
    <label>Booked Online</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this was booked through the Experience Site</description>
    <inlineHelpText>Check if customer booked through the online portal</inlineHelpText>
</CustomField>