force-app/main/default/objects/Appointment__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <description>Reason for cancellation if appointment was cancelled</description>
    <inlineHelpText>Why was this appointment cancelled?</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Stylist Unavailable</fullName>
            </value>
            <value>
                <fullName>Schedule Conflict</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>