force-app/main/default/objects/Appointment__c/fields/Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Sent__c</fullName>
    <label>Confirmation Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether confirmation email/SMS was sent</description>
    <inlineHelpText>Check when confirmation has been sent to customer</inlineHelpText>
</CustomField>