force-app/main/default/objects/Appointment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
    <description>End time of the appointment (calculated from services)</description>
    <inlineHelpText>When will this appointment end?</inlineHelpText>
</CustomField>