force-app/main/default/objects/Appointment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Special requests or notes for this appointment</description>
    <inlineHelpText>Any special requests or notes from the customer</inlineHelpText>
</CustomField>