force-app/main/default/objects/Appointment__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether reminder was sent before appointment</description>
    <inlineHelpText>Check when reminder has been sent to customer</inlineHelpText>
</CustomField>