force-app/main/default/objects/Appointment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
    <required>true</required>
    <description>Start time of the appointment</description>
    <inlineHelpText>What time does this appointment start?</inlineHelpText>
</CustomField>