force-app/main/default/objects/Appointment__c/fields/Stylist__c.field-meta.xml
<CustomField>
    <fullName>Stylist__c</fullName>
    <label>Stylist</label>
    <type>Lookup</type>
    <referenceTo>Stylist__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The stylist performing the services</description>
    <inlineHelpText>Select the stylist for this appointment</inlineHelpText>
</CustomField>