force-app/main/default/objects/Appointment__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <label>Total Duration (Minutes)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Total duration for all services</description>
    <inlineHelpText>Total time needed for all services in this appointment</inlineHelpText>
</CustomField>