force-app/main/default/objects/Appointment__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Total price for all services in this appointment</description>
    <inlineHelpText>Sum of all service prices for this appointment</inlineHelpText>
</CustomField>