force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stylist__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>