force-app/main/default/objects/Appointment__c/listViews/Scheduled.listView-meta.xml
<ListView>
    <fullName>Scheduled</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stylist__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Scheduled</label>
</ListView>