force-app/main/default/objects/Appointment__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stylist__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>