force-app/main/default/objects/Appointment__c/listViews/Todays_Appointments.listView-meta.xml
<ListView>
    <fullName>Todays_Appointments</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stylist__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Appointments</label>
</ListView>